fix: improve types
