# Sources/Petstore/Schemas/TestResult.swift
@@ -1,0 +1,7 @@
+import Foundation
+
+public enum TestResult: Codable, Hashable, Sendable {
+    case string(String)
+    case number(Double)
+    case boolean(Bool)
+}
